移除：UseG1GC， 新增：PermSize
移除：UseG1GC， 新增：PermSize