@@ -37,8 +37,12 @@ $ find / -name atlassian-agent.jar 2>>/dev/null
 #/opt/atlassian/confluence/bin/setenv.sh 
 #添加破解程序的包路径
 CATALINA_OPTS="-javaagent:/usr/local/atlassian-agent/atlassian-agent.jar ${CATALINA_OPTS}"
-#配置服务的可用内存范围：最小2G,最大3G
-CATALINA_OPTS="-Xms2048m -Xmx3072m -XX:+UseG1GC ${CATALINA_OPTS}"
+#设置 jvm 内存可使用的范围
+#-XX:PermSize=128m -XX:MaxPermSize=512m
+#
+#CATALINA_OPTS="-Xms2048m -Xmx3072m -XX:+UseG1GC ${CATALINA_OPTS}"
+#移除：UseG1GC， 新增：PermSize
+CATALINA_OPTS="-Xms256m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=512m ${CATALINA_OPTS}"
 
 
 #3）拷贝 MYSQL 驱动文件包，到安装目录
